trying to fix overflow on x

--- a/src/styles/LinkInBio.module.css
+++ b/src/styles/LinkInBio.module.css
@@ -7,6 +7,7 @@ div.LinkInBio {
   background-color: var(--primary-color);
   color: #ffffff;
   overflow-y: auto;
+  gap: 1rem;
 
   header {
     display: flex;
@@ -74,7 +75,7 @@ div.LinkInBio {
   div.LinkInBio {
     header {
       img {
-        min-width: 32rem;
+        max-width: 32rem;
         min-height: auto;
       }
     }
